# ChangeLog for sys-libs/db
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.121 2005/05/29 10:46:36 pauldv Exp $

  29 May 2005; Paul de Vrieze <pauldv@gentoo.org> db-4.2.52_p2.ebuild:
  Mark 4.2 stable.

  09 Apr 2005; Markus Rothe <corsair@gentoo.org> db-4.1.25_p1-r4.ebuild:
  Stable on ppc64

  29 Mar 2005; Markus Rothe <corsair@gentoo.org> db-4.2.52_p2.ebuild:
  Added ~ppc64 to KEYWORDS

*db-4.3.27 (29 Mar 2005)

  29 Mar 2005; <pauldv@gentoo.org> +files/db-4.3-jarlocation.patch,
  +files/db-4.3-libtool.patch, +files/db-4.3.27-fix-dep-link.patch,
  db-3.2.9-r10.ebuild, +db-4.3.27.ebuild:
  Fix silly cd error

  28 Mar 2005; Jason Wever <weeve@gentoo.org> db-3.2.9-r10.ebuild:
  Marked as ~sparc because this ebuild is brand new, improperly marked stable,
  and the patch is broken. :(

  27 Mar 2005; Paul de Vrieze <pauldv@gentoo.org>
  +files/db-3.2.9-java15.patch, db-3.2.9-r10.ebuild:
  Add a java 1.5 patch from bug #84770. Also bump all architectures that were 
  not stable on this ebuild. It has not changed much since months and the 
  instable keywords were added a very long time ago.

  19 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> db-1.85-r2.ebuild:
  Stable on alpha.

  19 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> db-4.1.25_p1-r4.ebuild:
  Stable on alpha.

*db-4.3.27 (02 Feb 2005)

  02 Feb 2005; <pauldv@gentoo.org> +files/db-4.3-jarlocation.patch,
  +files/db-4.3-libtool.patch, +files/db-4.3.27-fix-dep-link.patch,
  +db-4.3.27.ebuild:
  A new upstream version. The patches are updated to apply again.

  30 Jan 2005; Paul de Vrieze <pauldv@gentoo.org> db-1.85-r1.ebuild,
  db-1.85-r2.ebuild, db-3.2.9-r10.ebuild, db-3.2.9-r7.ebuild,
  db-4.0.14-r2.ebuild, db-4.0.14-r3.ebuild, db-4.1.25_p1-r3.ebuild,
  db-4.1.25_p1-r4.ebuild, db-4.2.52_p1.ebuild, db-4.2.52_p2.ebuild:
  The upstream download location changed. Fixed it.
