@@ -1,40 +1,40 @@
-MD5 aa7ed75e904eb3c190f487d9ced3c952 ChangeLog 19640
 MD5 15e26e1303761aa1b814d1d46f930d74 db-1.85-r1.ebuild 1435
 MD5 cc6ac89ca798a8b94e26bb3287128435 db-3.2.9-r10.ebuild 4298
-MD5 741524071da690cce92723361fcffbad db-4.2.52_p1.ebuild 2839
 MD5 c7d2cb46737828d602a76a07c422b204 db-3.2.9-r7.ebuild 4436
-MD5 29e498141c2258cd11f8e76b7a135e24 db-4.2.52_p2.ebuild 2796
+MD5 eaecd9bbdbfcef0fce835a7f0ef46e6d db-4.3.27.ebuild 2919
 MD5 b44aeca1f68f90e025f65dcc7eed02b5 db-4.0.14-r2.ebuild 2230
 MD5 252b90fa5fda61f230a55bef95f921a0 db-4.0.14-r3.ebuild 2484
-MD5 566d366efa85abba75496861f367256e db-4.1.25_p1-r4.ebuild 2701
 MD5 d5f713e2e97a27168f5cdc5a0b37c5f4 db-4.1.25_p1-r3.ebuild 2552
+MD5 566d366efa85abba75496861f367256e db-4.1.25_p1-r4.ebuild 2701
+MD5 741524071da690cce92723361fcffbad db-4.2.52_p1.ebuild 2839
+MD5 206a8d35a3ad2ccfa0639311c0aeb9ab db-4.2.52_p2.ebuild 2925
 MD5 e1753ef0eb3e9614fadff321ecd1b082 metadata.xml 1460
-MD5 e21e448ec09a5ad049812eef95a15a57 db-4.3.27.ebuild 2790
 MD5 3d914ddfa4c2949f7da3f0086e6829f9 db-1.85-r2.ebuild 1466
+MD5 f3e60db96f8088f3047d2937c73d430e ChangeLog 19899
+MD5 e54996f4a19633179add94a051ebf900 files/digest-db-4.3.27 62
 MD5 194200b3295b95b46b4564980af27f1f files/db-3.2.9-fix-dep-link.patch 1005
 MD5 6eb8be5f7803acaa5bcfd4ed5ffabf83 files/db-3.2.9-jarlocation.patch 492
 MD5 eb9b0f2c1d8440c6c49fc1d916c2dc0e files/db-4.0.14-fix-dep-link.patch 1119
 MD5 0101200dac8a9299fc1578081ac72b71 files/db-4.0.14-jarlocation.patch 565
+MD5 75ba5de97737693cfdfe85908b5adfbd files/db-4.1.25-uclibc.patch 731
 MD5 2bb2a5dbe8d16f858d177e1193639b70 files/db-4.1.25_p1-jarlocation.patch 626
-MD5 69bde9765bf0a2d6c55a253eb0e53190 files/digest-db-1.85-r2 120
-MD5 3057fcc117c33a02bd4c092586a58e49 files/digest-db-1.85-r1 59
 MD5 3c47ce6ed92e948fbde232c1e3571f16 files/db-4.2-jarlocation.patch 599
+MD5 ecd81fa9868ec49c61306444144d44a9 files/db.1.85.patch 55584
+MD5 3057fcc117c33a02bd4c092586a58e49 files/digest-db-1.85-r1 59
 MD5 44c6041ae9527bfa8a4ff4cec7cf4a9a files/digest-db-3.2.9-r10 61
 MD5 44c6041ae9527bfa8a4ff4cec7cf4a9a files/digest-db-3.2.9-r7 61
-MD5 ecd81fa9868ec49c61306444144d44a9 files/db.1.85.patch 55584
+MD5 69bde9765bf0a2d6c55a253eb0e53190 files/digest-db-1.85-r2 120
 MD5 068fc523df1ee6f36b5de8516ab7739f files/digest-db-4.0.14-r2 62
 MD5 068fc523df1ee6f36b5de8516ab7739f files/digest-db-4.0.14-r3 62
-MD5 35fa694f3db327e4fb015728aca6a082 files/digest-db-4.2.52_p1 118
-MD5 75ba5de97737693cfdfe85908b5adfbd files/db-4.1.25-uclibc.patch 731
 MD5 f029f70f531ca67c16b62573d61de49e files/digest-db-4.1.25_p1-r3 118
 MD5 f029f70f531ca67c16b62573d61de49e files/digest-db-4.1.25_p1-r4 118
+MD5 35fa694f3db327e4fb015728aca6a082 files/digest-db-4.2.52_p1 118
+MD5 68a677d9846ad3fc623f173581ff9aa5 files/digest-db-4.2.52_p2 175
 MD5 9cf113248f29b1e319ae73b266df4986 files/patch.3.2.9.1 2139
 MD5 f8edd1cf6535cd62f9b8ff81e0474273 files/patch.3.2.9.2 495
-MD5 68a677d9846ad3fc623f173581ff9aa5 files/digest-db-4.2.52_p2 175
-MD5 e54996f4a19633179add94a051ebf900 files/digest-db-4.3.27 62
 MD5 395933484399c22681916b0e86db3258 files/db-4.1.25-java.patch 721
 MD5 4f68188f3bc051f50a85c5b72bab85c7 files/db-4.2-libtool.patch 665
-MD5 fa494e61698001c02f2b6a192acfaf99 files/db-3.2.9-java15.patch 598
 MD5 b1df069d8d9a974fe864e681dc165cfc files/db-4.3-jarlocation.patch 599
-MD5 fee87f3b3eb96ac9a15f44aa5ff1c08c files/db-4.3-libtool.patch 2161
 MD5 72688c24d0217c7e214b816417d8ef97 files/db-4.3.27-fix-dep-link.patch 1179
+MD5 fee87f3b3eb96ac9a15f44aa5ff1c08c files/db-4.3-libtool.patch 2161
+MD5 fa494e61698001c02f2b6a192acfaf99 files/db-3.2.9-java15.patch 598
